--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>YahooFinanceAPI</artifactId>
             <version>3.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.68</version>
+        </dependency>
     </dependencies>
 
     <build>
