--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/test
+    url: jdbc:mysql://localhost:3306/test?useunicode=true&characterencoding=utf-8
     driverClassName: com.mysql.jdbc.Driver
     username: p_wei_wu
     password: wW243211
