--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,5 +2,5 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8
     driverClassName: com.mysql.jdbc.Driver
-    username: p_wei_wu
-    password: wW243211
+    username: root
+    password:
