--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     username: root
     password:
 logging:
-  file: ./info.log
+  file: ./logs/info.log
   pattern:
     console: "%d %-5level %logger : %msg%n"
     file: "%d %-5level %logger : %msg%n"
