--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8
     driverClassName: com.mysql.jdbc.Driver
     username: root
-    password: ww243211?
+    password: 243211
 logging:
   file: ./logs/info.log
   pattern:
