--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
                     <target>14</target>
                     <encoding>UTF-8</encoding>
                     <compilerArgs>--enable-preview</compilerArgs>
+                    <testCompilerArgument>--enable-preview</testCompilerArgument>
                 </configuration>
             </plugin>
             <plugin>
@@ -87,7 +88,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
-                    <argline>--enable-preview</argline>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
             <plugin>
